--- a/styles.css
+++ b/styles.css
@@ -18,13 +18,14 @@ div,img{
 body {
   font-family: "Open Sans", sans-serif;   
   background: url(/img/lightBG.jpg) no-repeat center center fixed;
-  background-size: cover; 
+  background-size: cover;
+  background-position: center center;
 }
 
 .jumbotron {
   margin: 0;
   padding: 15px;
-  background-image: linear-gradient(to right,  #1e1c8d, #4af9ff, #15dbc1, #28f68f, #53e778); 
+  background-image: linear-gradient(to right,  #1e1c8d, #4af9ff, #15dbc1, #28f68f, #94f18b); 
   color: black; 
 }
 
@@ -34,7 +35,7 @@ body {
 }
 
 .site-footer {
-  background-image: linear-gradient(#4af9ff, #CFF4D2);
+  background-image: linear-gradient(#4af9ff, #fff);
   padding: 15px;
   position: absolute;
   width: 100%; }
