--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,9 @@ body {
   background-image: linear-gradient(#4af9ff, #fff);
   padding: 15px;
   position: absolute;
-  width: 100%; }
+  width: 100%; 
+  bottom: 0;
+}
 
 h1 {
   font-size: 75px;
