--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-/*Fix My Divs!!! 
+/* Fix My Divs!!! 
 div,img{
     border: dashed 1px gray;
     padding:1px;
@@ -19,7 +19,6 @@ body {
   font-family: "Open Sans", sans-serif;   
   background: url(/img/lightBG.jpg) no-repeat center center fixed;
   background-size: cover;
-  background-position: center center;
 }
 
 .jumbotron {
@@ -32,14 +31,12 @@ body {
 .navbar {
   background-color: #4af9ff;
   font-weight: bold;
+  position: sticky;
 }
 
 .site-footer {
   background-image: linear-gradient(#4af9ff, #fff);
   padding: 15px;
-  position: absolute;
-  width: 100%; 
-  bottom: 0;
 }
 
 h1 {
@@ -53,4 +50,7 @@ h1, h2, h3, h4 {
 .boxStyle {
    background-color: rgba(255, 255, 255, 0.829);
    border: solid #4af9ff;
+   margin: 10px 5px;
+   padding: 10px;
+   border-radius: 7px;
   }
